--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ section {
 }
 
 .js-shuttle-fade {
-	-webkit-animation: shuttle-fade 1s linear forwards;
+	-webkit-animation: shuttle-fade .5s linear forwards;
 }
 
 @-webkit-keyframes shuttle-fade {
@@ -58,3 +58,46 @@ section {
 		top: 0;}
 }
 
+.ship-section {
+	background: transparent url("../img/kasei-valles-canyons.jpg") no-repeat center top;
+	background-size: cover;
+	text-align: center;
+}
+
+.ship1,
+.ship3 {
+	width: 150px;
+	position: relative;
+	display: inline-block;
+	opacity: 0;
+	top: 5em;
+}
+
+.ship2,
+.ship4 {
+	width: 150px;
+	position: relative;
+	display: inline-block;
+	opacity: 0;
+	top: 7em;
+}
+
+.js-ship-odd-fade {
+	-webkit-animation: ship-odd-fade .5s linear forwards;
+}
+
+@-webkit-keyframes ship-odd-fade{
+	0%	{opacity: 0;}
+	100% {opacity: 1;
+		top: 0;}
+}
+
+.js-ship-even-fade {
+	-webkit-animation: ship-even-fade .5s linear forwards;
+}
+
+@-webkit-keyframes ship-even-fade{
+	0%	{opacity: 0;}
+	100% {opacity: 1;
+		top: 0;}
+}
